--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 name: Code Breaker
+description: Ramblings of a self-taught coder
 markdown: redcarpet
 pygments: true
+url: "http://localhost:4000"
